# Obsidian-Arcadia-Network

./: ARCHITECTURE.md  CONTRIBUTING.md  EXAMPLES.md  EmergencyShutdown.sol  LAYER1_COMPLETE.md  LAYER4_COMPLETE.md  LAYER5_COMPLETE.md  LAYER6_COMPLETE.md  LICENSE  OBSIDIAN_LANGUAGE.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  README.md.backup  README.md.backup2  README.md.bak  README_PACKAGE.md  README_QUICKSTART_FIX.md  README_UPDATE.md  TESTING.md  WhitePaper.md  analyze_protocol.py  arbitrage_swarm.py  create_docs.sh  dashboard.py  integration_plan.md  layer1-report.xml  main.py  multi_out.txt  predictive_trader.py  pyproject.toml  quick_start_update.md  run_all_tests.py  setup.py  setup_cli_update.py  test_entity.ent  test_everything.sh  test_ollama.py  test_ollama_entity_decision.py  test_openclaw_ws.py  (+4 more)
demos/: README.md  behavior_test.py  behavior_test_fixed.py  demo_launcher.py
engine/: behavior.py  coordination.py  entity.py  executor.py  executor.py.old  multi_entity.py  parser.py  parser.py.old
entities/: adaptive.ent  champion_ShadowStrike_1771793044.ent  champion_ShadowStrike_1771794084.ent  champion_ShadowStrike_1771794226.ent  champion_ShadowStrike_1771794890.ent  champion_thunderfist_1771784415.ent  researcher.ent  test_complex.ent  test_multi_1.ent  test_multi_2.ent  worker1.ent  worker2.ent
examples/: test_behavior_basic.ent  test_multi_0.ent  test_oscillation.ent  test_performance.ent  test_recovery.ent  test_reputation.ent  test_tools.ent
oan/: __init__.py  cli.py
oan_ai/: __init__.py  agent_simulation.py  cognitive_engine.py  emotion_system.py  energy_system.py  market_environment.py  memory_system.py  strategy_evolution.py
obsidian_arcadia_network.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rust/: Cargo.toml  README.md
rust/integration_tests/: run_all_integration_tests.py  test_battle_royale.py  test_full_protocol.py  test_full_stack.py  test_tournament.py  test_ultimate_stress.py
rust/oan-engine/: Cargo.toml  patch_dsl.py  rust_engine.py  test_rust_engine.py  write_rust_src.py
rust/oan-engine/src/: brain.rs  entity.rs  lib.rs  pyproject.toml  smart_entity.rs
rust/oan-engine/src/dsl_compiler/: mod.rs
rust/oan-engine/src/entity_loop/: mod.rs
rust/oan-engine/src/python_bridge/: mod.rs
rust/oan-engine/src/simulation_core/: mod.rs
rust/oan-safety/: Cargo.toml
rust/oan-safety/src/: lib.rs
tests/: test_behavior.py  test_communication.py  test_coordination.py  test_ollama.py
web3/: .mocharc.js  LAYER2_COMPLETE.md  PHASE_2.2.md  PHASE_2.3.md  PHASE_2.4.md  PHASE_2.5.md  PHASE_3.1.md  PHASE_3.2.md  PHASE_3.3.md  PHASE_3.4.md  PHASE_3.5.md  PHASE_4.1.md  PHASE_4.2.md  README.md  SETUP.md  WEB3_COMPLETE.md  WEB3_SUMMARY.md  fix_layer7.js  hardhat.config.js  oan-reporter.js  package-lock.json  package.json  (+1 more)
(+384 files in other folders)
