[project]
name = "obsidian-arcadia-network"
version = "1.0.0"
description = "Autonomous Entity Civilization Protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
oan = "obsidian_arcadia_network.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_arcadia_network"]
