[workspace]
name    = "oan-rust"
version = "1.0.0"
members = ["oan-engine/src/python_bridge",
    "oan-safety",
    
]
resolver = "2"

[workspace.dependencies]
tokio        = { version = "1",    features = ["full"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
thiserror    = "1"
tracing      = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap      = "5"
rayon        = "1"
chrono       = { version = "0.4", features = ["serde"] }
uuid         = { version = "1",   features = ["v4", "serde"] }
sha2         = "0.10"
hex          = "0.4"

[profile.release]
opt-level    = 3
lto          = true
codegen-units = 1
panic        = "abort"

[profile.dev]
opt-level    = 1
