[package]
name        = "oan-engine"
version     = "1.0.0"
edition     = "2021"
description = "OAN Rust engine - Python AI accelerator via PyO3"

[workspace]

[lib]
name       = "oan_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
anyhow     = "1"
thiserror  = "1"
tracing    = "0.1"
rayon      = "1"
chrono     = { version = "0.4",  features = ["serde"] }
uuid       = { version = "1",    features = ["v4", "serde"] }
sha2       = "0.10"
hex        = "0.4"
pyo3       = { version = "0.21",  features = ["extension-module", "abi3-py38"] }
