[package]
name = "oan-engine"
version = "1.0.0"
edition = "2021"

[lib]
name = "oan_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
